tests/valid/Embedded_Functions/String Concatenation.vyp
void main(void) {
    string firstPart;
    string secondPart;
    string result;

    
    firstPart = "Hello, ";
    secondPart = "World!";
   
    result = firstPart + secondPart;

    print("Concatenated String: ", result, "\n");
}
