tests/invalid/Embedded_Functions/Concatenation_with_Non-String.vyp
void main(void) {
    string firstPart;
    int numberPart;
    string result;

    firstPart = "The number is: ";
    numberPart = 42;

   
    result = firstPart + numberPart;

    print(result, "\n");
}
